feat(html): head 영역 meta 추가, title 수정

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang = "ko">
     <head>
-        <title>Hello world</title>
+        <meta charset = "UTF-8">
+        <title>82_32214252_정혜영</title>
     </head>
     <body>
         <h1>Hello World</h1>
