feat(html): body 영역에 header 영역 작성

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <title>82_32214252_정혜영</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <div id = "container">
+            <header>
+                <div id = "logo">
+                    <h1>self-introduction</h1>
+                </div>
+            </header>
+        </div>
     </body>
 </html>
