feat(html): main 영역 자기소개 작성

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
                     <h1>self-introduction</h1>
                 </div>
             </header>
+
+            <main class = "contents">
+                <section id = "introduction">
+                    <h2>자기소개</h2>
+                    <div class = "detail">
+                        <img src = "images/photo1.jpg" width="20%">
+                    </div>
+                    <div class = "schedule">
+                        <ul>
+                            <li>이름: 정혜영</li>
+                            <li>나이: 22</li>
+                            <li>학교: 단국대학교</li>
+                            <li>학과: 소프트웨어학과</li>
+                            <li>학번: 21</li>
+                            <li>MBTI: INTP</li>
+                        </ul>                  
+                    </div>
+                </section>
+            </main>
         </div>
     </body>
 </html>
