feat(html): main 영역 취미 작성

--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
                         </ul>                  
                     </div>
                 </section>
+                <section id = "hobby">
+                    <h2>취미</h2>
+                    <div class = "detail">
+                        <img src = "images/photo2.jpg" width="20%">
+                    </div>
+                    <div class = "schedule">
+                        <ui>
+                            <li>영화: </li>
+                            <li>드마마: 닥터차정숙, 시그널, 눈이부시게, 나의아저씨, 프렌즈, 셜록홈즈</li>
+                            <li>웹툰: 빌드업, 프레너미, 풋사과, 가비지타임, 물위의 우리, 지옥사원</li>
+                            <li>음악: 잔나비, 검정치마, 엑소, 백예린</li>
+                            <li>게임: 할로우나이트, 스타듀밸리</li>
+                            <li>맛집 가기</li>
+                        </ui>
+                    </div>
+                </section>
+
             </main>
         </div>
     </body>
