feat(html): main 영역 관심분야 작성

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                         </ui>
                     </div>
                 </section>
+                <section id = "interests">
+                    <h2>관심분야</h2>
+                    <div class = "schedule">
+                        <ui>
+                            <li>프론트엔드</li>
+                            <li>백엔드</li>
+                            <li>애플리케이션</li>                    
+                        </ui>
+                    </div>
+                </section>
 
             </main>
         </div>
