feat(html): main 영역 연락처  작성

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                         </ui>
                     </div>
                 </section>
-
+                <section id = "contact">
+                    <h2>연락처</h2>
+                    <p>이메일: junghy@dankook.ac.kr</p>
+                </section>
             </main>
         </div>
     </body>
