feat(css): css파일 작성

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset = "UTF-8">
         <title>82_32214252_정혜영</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div id = "container">
@@ -35,24 +36,24 @@
                         <img src = "images/photo2.jpg" width="20%">
                     </div>
                     <div class = "schedule">
-                        <ui>
-                            <li>영화: </li>
-                            <li>드마마: 닥터차정숙, 시그널, 눈이부시게, 나의아저씨, 프렌즈, 셜록홈즈</li>
+                        <ul>
+                            <li>영화: 인터스텔라</li>
+                            <li>드마마:프렌즈, 셜록홈즈</li>
                             <li>웹툰: 빌드업, 프레너미, 풋사과, 가비지타임, 물위의 우리, 지옥사원</li>
                             <li>음악: 잔나비, 검정치마, 엑소, 백예린</li>
                             <li>게임: 할로우나이트, 스타듀밸리</li>
                             <li>맛집 가기</li>
-                        </ui>
+                        </ul>
                     </div>
                 </section>
                 <section id = "interests">
                     <h2>관심분야</h2>
                     <div class = "schedule">
-                        <ui>
+                        <ul>
                             <li>프론트엔드</li>
                             <li>백엔드</li>
                             <li>애플리케이션</li>                    
-                        </ui>
+                        </ul>
                     </div>
                 </section>
                 <section id = "contact">
