feat(css): 동영상 추가

--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
                             <li>영화: 인터스텔라</li>
                             <li>드마마:프렌즈, 셜록홈즈</li>
                             <li>웹툰: 빌드업, 프레너미, 풋사과, 가비지타임, 물위의 우리, 지옥사원</li>
-                            <li>음악: 잔나비, 검정치마, 엑소, 백예린</li>
+                            <li>음악: 엑소, 백예린, 클래식</li>
                             <li>게임: 할로우나이트, 스타듀밸리</li>
                             <li>맛집 가기</li>
                         </ul>
                     </div>
+                </section>
+                <section id = "video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/74_yqNBhQbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </section>
                 <section id = "interests">
                     <h2>관심분야</h2>
